fix desctop version

--- a/src/index.html
+++ b/src/index.html
@@ -121,40 +121,40 @@
             <img
               src="./images/gallery/gallery.png"
               alt="image"
-              class="gallery__image"
+              class="gallery__image gallery__image--tall"
             >
           </div>
 
           <div>
             <img
-              src="./images/gallery/gallery-2.png"
+              src="./images/gallery/gallery-3.png"
               alt="image"
-              class="gallery__image"
+              class="gallery__image gallery__image--big"
             >
           </div>
 
           <div>
             <img
-              src="./images/gallery/gallery-2.png"
+              src="./images/gallery/gallery-4.png"
               alt="image"
-              class="gallery__image"
+              class="gallery__image gallery__image--long"
             >
           </div>
 
           <div>
             <img
-              src="./images/gallery/gallery-2.png"
+              src="./images/gallery/gallery-5.png"
               alt="image"
-              class="gallery__image"
+              class="gallery__image gallery__image--short"
             >
           </div>
         </div>
 
         <div class="gallery__slider__items">
-          <div class="gallery__slider__item"></div>
-          <div class="gallery__slider__item"></div>
-          <div class="gallery__slider__item"></div>
-          <div class="gallery__slider__item"></div>
+          <span class="gallery__dot" onclick="currentSlide(1)"></span>
+          <span class="gallery__dot" onclick="currentSlide(2)"></span>
+          <span class="gallery__dot" onclick="currentSlide(3)"></span>
+          <span class="gallery__dot" onclick="currentSlide(4)"></span>
         </div>
       </section>
 
