--- a/src/index.html
+++ b/src/index.html
@@ -18,104 +18,74 @@
   </head>
   <body class="page__body" id="home">
     <header class="header page__section">
-      <div class="header__background"></div>
       <div class="container">
+        <img
+          class="header__image"
+          src="./images/Main-page-photo.jpg"
+          alt="NAMU Museum"
+        >
+
         <div class="header__content">
-          <div class="header__grid grid">
-            <div class="header__left grid__item--mobile-1-2 grid__item--tablet-1-3 grid__item--desktop-1-5">
-              <a
-                href="#menu"
-                class="icon icon--menu" aria-label="Перейти до меню"
-              ></a>
-              <h1 class="header__title">
-                ХУДОЖНІЙ МУЗЕЙ
-              </h1>
-              <div class="header__flex">
-                <div class="header__vertical-container">
-                  <div class="header__vertical">
-                    ПОДІЇ
-                  </div>
-                </div>
-                <button class="header__button button">
-                  <div class="header__button-word">
-                    КВИТКИ
-                  </div>
-                  <div class="header__button-arrow"></div>
-                </button>
-              </div>
-            </div>
-            <div class="header__right grid__item--mobile-1-2 grid__item--tablet-4-6 grid__item--desktop-6-12">
+          <div class="header__nav">
+            <a href="#menu" class="header__menu-opener"></a>
+
+            <a href="#home" class="header__logo">
               <img
-                src="/images/NAMU-logo.svg"
-                alt="NAMU logo"
-                class="header__logo"
+                src="./images/NAMU-logo.svg"
+                alt="NA_MU_logo"
+                class="header__logo-image"
               >
-            </div>
+            </a>
           </div>
 
-          <nav class="header__nav nav" id="menu">
-            <div class="container">
-              <div class="header__content header__nav-flex">
-                <a href="#" class="icon icon--cross"></a>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-                <ul class="nav__list ul">
-                  <div class="nav__list-flex">
-                    <li class="nav__item">
-                      <a href="#gallery" class="nav__link">Галерея</a>
-                    </li>
-                    <li class="nav__item">
-                      <a href="#events" class="nav__link">Виставки та <br> події</a>
-                    </li>
-                  </div>
-                  <div class="nav__list-flex">
-                    <li class="nav__item">
-                      <a href="#about-us" class="nav__link">Про Нас</a>
-                    </li>
-                    <li class="nav__item">
-                      <a href="#contacts" class="nav__link">Контакти</a>
-                    </li>
-                  </div>
+          <div class="header__tickets tickets">
+            <div class="tickets__title">Квитки</div>
 
-                </ul>
+            <a href="#actuals" class="tickets__button"></a>
+          </div>
 
-                <div class="nav__line"></div>
-
-                <div class="nav__schedule schedule">
-                  <h3 class="schedule__title">
-                    Графік роботи
-                  </h3>
-
-                  <div class="schedule__flex schedule__flex--header">
-                    <ul class="schedule__list">
-                      <li class="schedule__work-day">
-                        <time>12:00 — 20:00</time> середа
-                      </li>
-                      <li class="schedule__work-day">
-                        <time>12:00 — 20:00</time> четвер
-                      </li>
-                      <li class="schedule__work-day">
-                        <time>12:00 — 20:00</time> п'ятниця
-                      </li>
-                      <li class="schedule__work-day">
-                        <time>11:00 — 19:00</time> субота
-                      </li>
-                      <li class="schedule__work-day">
-                        <time>11:00 — 19:00</time> неділя
-                      </li>
-                    </ul>
-                    <p class="schedule__work-day-text">
-                      <strong>Вихідні</strong>: понеділок, вівторок<br>
-                      Каса припиняє роботу за 1 годину
-                      до закриття музею
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </nav>
+          <a href="#actuals" class="header__to-events">Події</a>
         </div>
       </div>
     </header>
+
+    <aside id="menu" class="page__menu menu">
+      <div class="menu__wrapper">
+        <div class="menu__container container">
+          <div class="menu__nav">
+            <a href="#" class="menu__close"></a>
+
+            <div class="menu__links">
+              <a href="#gallery" class="menu__link">Галерея</a>
+              <a href="#about-us" class="menu__link">Про нас</a>
+              <a href="#actuals" class="menu__link">Виставки та події</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </div>
+          </div>
+
+          <div class="menu__information information">
+            <h4 class="information__title">Графік роботи</h4>
+            <div class="information__data">
+              <p class="information__working-hours">
+                <strong>12:00 — 20:00</strong> середа <br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя <br>
+                <br>
+              </p>
+
+              <p class="information__days-off">
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
 
     <main class="main">
       <div class="page__section page__section--events events" id="events">
@@ -223,10 +193,10 @@
         </div>
       </div>
 
-      <div class="page__section page__section--contacts contacts" id="contacts">
+      <div class="page__section page__section--contacts contacts" id="subscription">
         <div class="container">
           <div class="grid grid--contacts">
-            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-5">
+            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
               <h2 class="page__title page__title--contacts">
                 Підписка
               </h2>
@@ -247,7 +217,7 @@
                     required
                   >
                 </form>
-                <button class="header__button-arrow header__button-arrow--contacts" type="submit"></button>
+                <a href="#actuals" class="tickets__button"></a>
               </div>
             </div>
           </div>
@@ -257,7 +227,7 @@
       <div class="footer page__section page__section--footer">
         <div class="container">
           <div class="footer__nav grid">
-            <div class="footer__icons grid__item--desktop-1-1 grid__item--tablet-1-1">
+            <div class="footer__icons grid__item--desktop-1-1 grid__item--tablet-1-1 grid__item--mobile-1-2">
               <a href="#" class="footer__link">
                 <img
                   src="/images/NAMU-logo.svg"
@@ -281,55 +251,56 @@
               </div>
             </div>
 
-            <div class="nav__schedule schedule grid__item--desktop-3-4 grid__item--tablet-2-3">
-              <h3 class="schedule__title schedule__title--footer">
-                Графік роботи
-              </h3>
+            <div class="menu__information information grid__item--desktop-3-4 grid__item--tablet-2-3 grid__item--mobile-1-1">
+              <h4 class="information__title information__title--footer">Графік роботи</h4>
+              <div class="information__data">
+                <p class="information__working-hours information__working-hours--footer">
+                  <strong>12:00 — 20:00</strong> середа <br>
+                  <strong>12:00 — 20:00</strong> четвер <br>
+                  <strong>12:00 — 20:00</strong> п’ятниця <br>
+                  <strong>11:00 — 19:00</strong> субота <br>
+                  <strong>11:00 — 19:00</strong> неділя <br>
+                  <br>
+                </p>
 
-              <div class="schedule__flex schedule__flex--footer">
-                <ul class="schedule__list">
-                  <li class="schedule__work-day schedule__work-day--footer">
-                    <time>12:00 — 20:00</time> середа
-                  </li>
-                  <li class="schedule__work-day schedule__work-day--footer">
-                    <time>12:00 — 20:00</time> четвер
-                  </li>
-                  <li class="schedule__work-day schedule__work-day--footer">
-                    <time>12:00 — 20:00</time> п'ятниця
-                  </li>
-                  <li class="schedule__work-day schedule__work-day--footer">
-                    <time>11:00 — 19:00</time> субота
-                  </li>
-                  <li class="schedule__work-day schedule__work-day--footer">
-                    <time>11:00 — 19:00</time> неділя
-                  </li>
-                </ul>
-                <p class="schedule__work-day-text schedule__work-day-text--footer">
-                  <strong>Вихідні</strong>: понеділок, вівторок<br>
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
+                <p class="information__days-off information__days-off--footer">
+                  Вихідні понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину до закриття музею
                 </p>
               </div>
             </div>
 
-            <div class="footer__contacts grid__item--desktop-5-6 grid__item--tablet-4-5">
-              <h3 class="schedule__title schedule__title--footer">
-                Контакти
-              </h3>
+            <div id="contacts" class="footer__contacts grid__item--desktop-5-6 grid__item--tablet-4-5 grid__item--mobile-2-2">
+              <h4 class="information__title information__title--footer">Контакти:</h4>
 
-              <p class="schedule__work-day-text schedule__work-day-text--footer">
-                вул. М. Грушевського, 6; Київ, 01001 <br>
-                тел. +38 (044) 278-13-57 <br>
-                факс +38 (044) 278-74-54 <br>
-                e-mail: info@namu.kiev.ua
-              </p>
+              <a
+                class="footer__address"
+                href="https://goo.gl/maps/PN9jgnNUQLVZhdgs9"
+                target="_blank"
+                >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a class="footer__tell" href="tel:+38(044)2781357">
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a class="footer__fax" href="tel:+38(044)2787454">
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a class="footer__email" href="mailto:footer@namu.kiev.ua">
+                e-mail: footer@namu.kiev.ua
+              </a>
             </div>
+
+            <a href="#" class="back-to-top grid__item--mobile-2-2"></a>
 
             <div class="grid__item--desktop-7-7 grid__item--tablet-2-5 grid__item--mobile-1-2">
               <div class="footer__line"></div>
             </div>
 
-            <div class="nav__list nav__list--footer grid__item--desktop-8-9 grid__item--tablet-2-3">
+            <div class="nav__list nav__list--footer grid__item--desktop-8-9 grid__item--tablet-2-3 grid__item--mobile-1-1">
               <li class="nav__item nav__item--footer">
                 <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
               </li>
@@ -337,7 +308,7 @@
                 <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
               </li>
             </div>
-            <div class="nav__list nav__list--footer grid__item--desktop-10-11">
+            <div class="nav__list nav__list--footer grid__item--desktop-10-11 grid__item--mobile-2-2  ">
               <li class="nav__item nav__item--footer">
                 <a href="#about-us" class="nav__link nav__link--footer">Про Нас</a>
               </li>
