--- a/src/index.html
+++ b/src/index.html
@@ -8,29 +8,31 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
-  <body>
+  <body class="body">
     <header class="header" id="header">
-      <nav class="header__nav">
-        <div>
-          <a href="#menu" class="header__link icon icon--menu"></a>
+      <div class="header__cover">
+        <nav class="header__nav">
+          <div>
+            <a href="#menu" class="header__link icon icon--menu"></a>
+          </div>
+
+          <div class="header__link__wrapper">
+            <a href="#" class="header__link icon icon--logo"></a>
+          </div>
+        </nav>
+
+        <div class="header__bottom">
+          <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+
+          <div class="header__bottom__container">
+            <a href="#" class="header__bottom__link">КВИТКИ</a>
+            <a href="#" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
+          </div>
         </div>
 
-        <div class="header__link__wrapper">
-          <a href="#" class="header__link icon icon--logo"></a>
+        <div class="header__side__title">
+          <p class="header__side__title__name">Події</p>
         </div>
-      </nav>
-
-      <div class="header__bottom">
-        <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
-
-        <div class="header__bottom__container">
-          <a href="#" class="header__bottom__link">КВИТКИ</a>
-          <a href="#" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
-        </div>
-      </div>
-
-      <div class="header__side__title">
-        <p class="header__side__title__name">Події</p>
       </div>
     </header>
 
@@ -106,7 +108,7 @@
       </section>
 
       <section class="lections lections__wrapper">
-        <div class="lections__container">
+        <div class="lections__container lections__wrapper">
           <h2 class="lections__title">ЛЕКЦІЯ <span class="lections__date">26/08/2019 - 11:00</span></h2>
           <p class="lections__name">Від класицизму до романтизму</p>
         </div>
