--- a/src/index.html
+++ b/src/index.html
@@ -184,18 +184,18 @@
           Галерея
         </div>
         <div class="slider__container">
-          <figure>
-            <img src="./images/gallery_1.jpg" alt="" id="img1">
-            <img src="./images/Rectangle 24.1.jpg" alt="" id="img2">
-            <img src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img3">
-            <img src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img4">
-          </figure>
+
+            <img class="mySlides" src="./images/gallery_1.jpg" alt="" id="img1">
+            <img class="mySlides" src="./images/Rectangle 24.1.jpg" alt="" id="img2">
+            <img class="mySlides" src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img3">
+            <img class="mySlides" src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img4">
+
         </div>
         <div class="slider__buttons">
-          <a href="#img1"><div class="slider__button btn1"></div></a>
-          <a href="#img2"><div class="slider__button"></div></a>
-          <a href="#img3"><div class="slider__button"></div></a>
-          <a href="#img4"><div class="slider__button"></div></a>
+          <div class="slider__button dot dot1"></div>
+          <div class="slider__button dot dot2"></div>
+          <div class="slider__button dot dot3"></div>
+          <div class="slider__button dot dot4"></div>
         </div>
       </div>
 
