--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<html lang="uk" class="page" id='top'>
+<html
+  lang="uk"
+  class="page"
+  id="top"
+>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Музей НАМУ</title>
-    <link rel="icon" type="image/x-icon" href="/images/icons/museum_icon.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/icons/museum_icon.png"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <script defer type="text/javascript" src="scripts/main.js"></script>
+    <script
+      defer
+      type="text/javascript"
+      src="scripts/main.js"
+    >
+    </script>
     <header class="header">
       <div class="header__container">
         <div class="header__burger">
           <div class="header__burgerIcon">
-            <img class="header__burgerIconImg" src="./images/icons/burger_menu.svg" alt="burger">
+            <img
+              class="header__burgerIconImg"
+              src="./images/icons/burger_menu.svg"
+              alt="burger"
+            >
           </div>
         </div>
         <h1 class="header__title">Художній<br>музей</h1>
@@ -44,22 +65,26 @@
       </div>
     </header>
 
-    <!-- fix this -->
+    <!-- fix this // fixed ✓-->
     <nav class="nav__container sidebar">
       <div class="nav">
-        <img class="nav__crossIcon" src="./images/icons/cross.svg" alt="burger_close">
+        <img
+          class="nav__crossIcon"
+          src="./images/icons/cross.svg"
+          alt="burger_close"
+        >
         <div class="nav__working-schedule nav__working-schedule-col-1">
           Графік роботи<br>
           <br>
-          <b>12:00 — 20:00</b> середа<br>
-          <b>12:00 — 20:00</b> четвер<br>
-          <b>12:00 — 20:00</b> п’ятниця<br>
-          <b>11:00 — 19:00</b> субота<br>
-          <b>11:00 — 19:00</b> неділя<br>
+          <strong>12:00 — 20:00</strong> середа<br>
+          <strong>12:00 — 20:00</strong> четвер<br>
+          <strong>12:00 — 20:00</strong> п’ятниця<br>
+          <strong>11:00 — 19:00</strong> субота<br>
+          <strong>11:00 — 19:00</strong> неділя<br>
           <br>
         </div>
         <div class="nav__working-schedule nav__working-schedule-col-2">
-          <b>Вихідні:</b> понеділок, вівторок
+          <strong>Вихідні:</strong> понеділок, вівторок
           <br>Каса припиняє роботу за 1 годину
           до закриття музею
         </div>
@@ -69,15 +94,27 @@
         </div>
 
         <div class="nav__links-col-1 nav__links">
-          <a href="#gallery">Галерея</a> <br>
+          <a href="#gallery">
+            Галерея
+          </a>
           <br>
-          <a href="#events">Виставки та події</a><br>
+          <br>
+          <a href="#events">
+            Виставки та події
+          </a>
+          <br>
           <br>
         </div>
         <div class="nav__links-col-2 nav__links">
-          <a href="#aboutUs">Про нас<br>
-            <br></a>
-          <a href="#contacts">Контакти</a><br>
+          <a href="#aboutUs">
+            Про нас
+            <br>
+            <br>
+          </a>
+          <a href="#contacts">
+            Контакти
+          </a>
+          <br>
           <br>
         </div>
       </div>
@@ -153,7 +190,7 @@
         </div>
       </div>
 
-      <div class="gallery" id='gallery'>
+      <div class="gallery" id="gallery">
         <div class="gallery__title events__title">
           Галерея
         </div>
@@ -184,18 +221,44 @@
           Галерея
         </div>
         <div class="slider__container">
-
-            <img class="mySlides" src="./images/gallery_1.jpg" alt="" id="img1">
-            <img class="mySlides" src="./images/Rectangle 24.1.jpg" alt="" id="img2">
-            <img class="mySlides" src="./images/medsestra-Bojiy-Mihailo-1955.jpg" alt="" id="img3">
-            <img class="mySlides" src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg" alt="" id="img4">
-
+          <img
+            class="mySlides"
+            src="./images/gallery_1.jpg"
+            alt=""
+            id="img1"
+          >
+          <img
+            class="mySlides"
+            src="./images/Rectangle 24.1.jpg"
+            alt=""
+            id="img2"
+          >
+          <img
+            class="mySlides"
+            src="./images/medsestra-Bojiy-Mihailo-1955.jpg"
+            alt=""
+            id="img3"
+          >
+          <img
+            class="mySlides"
+            src="./images/Olexandr_murashko_Zhinka_z_kvitamy.jpg"
+            alt=""
+            id="img4"
+          >
         </div>
         <div class="slider__buttons">
-          <div class="slider__button dot dot1"></div>
-          <div class="slider__button dot dot2"></div>
-          <div class="slider__button dot dot3"></div>
-          <div class="slider__button dot dot4"></div>
+          <div class="slider__button dot dot1">
+            <div class="bullet"></div>
+          </div>
+          <div class="slider__button dot dot2">
+            <div class="bullet"></div>
+          </div>
+          <div class="slider__button dot dot3">
+            <div class="bullet"></div>
+          </div>
+          <div class="slider__button dot dot4">
+            <div class="bullet"></div>
+          </div>
         </div>
       </div>
 
@@ -212,7 +275,7 @@
             placeholder="E-mail"
             type="email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-          />
+          ></input>
           <button
             class="subscription__input-button"
             type="button"
@@ -233,8 +296,13 @@
         NA<br>MU
         </div>
       </a>
-      <div class="footer__social">
-        <a title="facebook" href="https://www.facebook.com/namu.museum/?locale=uk_UA" target="_blank">
+      <div class="footer__socialMedia">
+        <a
+          title="facebook"
+          href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+          target="_blank"
+          rel="noopener"
+        >
           <img
             src="./images/icons/facebook.svg"
             alt="link to facebook page"
@@ -242,7 +310,12 @@
           >
         </a>
 
-        <a title="instagram" href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y=" target="_blank">
+        <a
+          title="instagram"
+          href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y="
+          target="_blank"
+          rel="noopener"
+        >
           <img
             src="./images/icons/instagram.svg"
             alt="link to instagram page"
@@ -250,7 +323,12 @@
           >
         </a>
 
-        <a title="YouTube" href="https://www.youtube.com/user/ArtMuseumOfUkraine" target="_blank">
+        <a
+          title="YouTube"
+          href="https://www.youtube.com/user/ArtMuseumOfUkraine"
+          target="_blank"
+          rel="noopener"
+        >
           <img
             src="https://cdn-icons-png.flaticon.com/512/717/717426.png"
             alt="our YouTube channel"
@@ -260,7 +338,12 @@
 
 
 
-        <a title="Twitter(X)" href="https://twitter.com/NAMU_120" target="_blank">
+        <a
+          title="Twitter(X)"
+          href="https://twitter.com/NAMU_120"
+          target="_blank"
+          rel="noopener"
+         >
           <img
             src="https://cdn-icons-png.flaticon.com/512/733/733635.png"
             alt="follow us on Twitter"
@@ -273,13 +356,13 @@
       <div class="footer__working-schedule">
         Графік роботи<br>
         <br>
-        <b>12:00 — 20:00</b> середа<br>
-        <b>12:00 — 20:00</b> четвер<br>
-        <b>12:00 — 20:00</b> п’ятниця<br>
-        <b>11:00 — 19:00</b> субота<br>
-        <b>11:00 — 19:00</b> неділя<br>
+        <strong>12:00 — 20:00</strong> середа<br>
+        <strong>12:00 — 20:00</strong> четвер<br>
+        <strong>12:00 — 20:00</strong> п’ятниця<br>
+        <strong>11:00 — 19:00</strong> субота<br>
+        <strong>11:00 — 19:00</strong> неділя<br>
         <br>
-        <b>Вихідні:</b> понеділок, вівторок
+        <strong>Вихідні:</strong> понеділок, вівторок
         <br>Каса припиняє роботу за 1 годину
         до закриття музею
       </div>
@@ -287,7 +370,12 @@
       <div class="footer__contacts" id="contacts">
         Контакти:<br>
         <br>
-        <a title="google maps" href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwiP0c6C6JiCAxXWg_0HHTOzDU4Q8gF6BAgNEAA&ved=2ahUKEwiP0c6C6JiCAxXWg_0HHTOzDU4Q8gF6BAgQEAI" target="_blank">
+        <a
+          title="google maps"
+          rel="noopener"
+          href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwiP0c6C6JiCAxXWg_0HHTOzDU4Q8gF6BAgNEAA&ved=2ahUKEwiP0c6C6JiCAxXWg_0HHTOzDU4Q8gF6BAgQEAI"
+          target="_blank"
+        >
           вул. М. Грушевського, 6; <br>
           Київ, 01001<br>
         </a>
@@ -307,18 +395,29 @@
       <div class="footer__separator"></div>
 
       <div class="footer__links-col-1 footer__links">
-        <a href="#gallery">Галерея</a> <br>
+        <a href="#gallery">
+          Галерея
+        </a>
         <br>
-        <a href="#events">Виставки та події</a><br>
+        <br>
+        <a href="#events">
+          Виставки та події
+        </a>
+        <br>
         <br>
       </div>
       <div class="footer__links-col-2 footer__links">
-          <a href="#aboutUs">Про нас<br>
-            <br></a>
-          <a href="#contacts">Контакти</a><br>
+        <a href="#aboutUs">
+          Про нас
           <br>
+          <br>
+        </a>
+        <a href="#contacts">
+          Контакти
+        </a>
+        <br>
+        <br>
       </div>
-
       <div class="footer__copyright">
         <div class="footer__rights">
           Copyright © 2022. All Rights Reserved.
