--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMU</title>
+    <title>N A M U</title>
+    <link rel="favicon" href="./images/logo.png">
     <link rel="stylesheet" href="./styles/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +23,7 @@
 
       <div class="header__block">
         <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
-        <div class="header__button">
+        <a class="header__button" href="#events">
           <div href="#" class="header__button-title">КВИТКИ</div>
           <div class="header__button-rectangle">
             <img
@@ -31,7 +32,7 @@
               class="header__button-arrow"
             >
           </div>
-        </div>
+        </a>
       </div>
 
       <div class="header__events">
@@ -76,6 +77,8 @@
           </article>
         </article>
       </div>
+
+      <div class="page__menu-opacity"></div>
     </aside>
 
     <main class="main">
@@ -177,7 +180,7 @@
         </div>
       </section>
 
-      <section class="subscription" id="about-us">
+      <section class="subscription" id="about-us" >
         <h2 class="subscription__title">Підписка</h2>
         <article class="subscription__article">
           Бути в курсі всіх актуальних подій та останніх новин.
@@ -186,8 +189,10 @@
         <div class="subscription__button">
           <input
             type="email"
+            name="email"
             class="subscription__input"
             placeholder="E-mail"
+            required
           >
           <div class="subscription__button-square">
             <img
@@ -239,12 +244,18 @@
           </div>
           <div class="footer__contacts" id="contacts">
             <article class="footer__title">Контакти:</article>
-            <article class="footer__address">
-              вул. М. Грушевського, 6; Київ, 01001 <br>
-              тел. +38 (044) 278-13-57 <br>
-              факс +38 (044) 278-74-54 <br>
-              e-mail: info@namu.kiev.ua
-            </article>
+            <div class="footer__address">
+              <a
+                href="https://goo.gl/maps/Y7S1sJEMQfgfqSZp6"
+                class="footer__info-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a> <br>
+              <a href="tel:+38 044 278-13-57" class="footer__info-link">тел. +38 (044) 278-13-57</a> <br>
+              <a href="tel:+38 044 278-74-54" class="footer__info-link">факс +38 (044) 278-74-54</a> <br>
+              <a href="mailto:hello@miami.com" class="footer__info-link">e-mail: info@namu.kiev.ua</a>
+            </div>
           </div>
         </div>
         <div class="footer__arrow-border">
