prod_02.2_submButton+mailtoEmail_fixed

--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,7 @@
           ></input>
           <button
             class="subscription__input-button"
-            type="button"
+            type="submit"
           >
             <img
             src="./images/icons/play.svg"
@@ -386,7 +386,7 @@
           факс +38 (044) 278-74-54<br>
         </a>
 
-        <a title="send us an email" href="mailto:someone@example.com">
+        <a title="send us an email" href="mailto:info@namu.ua">
           e-mail: info@namu.kiev.ua<br>
         </a>
 
