--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -186,7 +186,7 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </article>
 
-        <div class="subscription__button">
+        <form class="subscription__button">
           <input
             type="email"
             name="email"
@@ -194,14 +194,17 @@
             placeholder="E-mail"
             required
           >
-          <div class="subscription__button-square">
+          <button class="subscription__button-square">
             <img
               src="./images/button-arrow-black.png"
               alt="arrow"
               class="subscription__button-arrow"
+              type="submit"
+              name="submit"
+              required
             >
-          </div>
-        </div>
+          </button>
+        </form>
       </section>
     </main>
 
@@ -254,7 +257,13 @@
               </a> <br>
               <a href="tel:+38 044 278-13-57" class="footer__info-link">тел. +38 (044) 278-13-57</a> <br>
               <a href="tel:+38 044 278-74-54" class="footer__info-link">факс +38 (044) 278-74-54</a> <br>
-              <a href="mailto:hello@miami.com" class="footer__info-link">e-mail: info@namu.kiev.ua</a>
+              <a
+                href="mailto:hello@miami.com"
+                class="footer__info-link"
+                type="email"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
             </div>
           </div>
         </div>
