--- a/src/index.html
+++ b/src/index.html
@@ -144,14 +144,16 @@
             alt="Від класицизму до романтизму"
             class="events__image--big"
           >
-          <div class="events__big-block">
-            <div class="events__description-flex events__description-flex--big">
-              <p class="events__type">ЛЕКЦІЯ</p>
-              <p class="events__dates">26/08/2019 - 11:00</p>
+          <div class="grid">
+            <div class="events__big-block grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
+              <div class="events__description-flex events__description-flex--big">
+                <p class="events__type events__type--big">ЛЕКЦІЯ</p>
+                <p class="events__dates events__dates--big">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="events__name--big">
+                Від класицизму до романтизму
+              </h3>
             </div>
-            <h3 class="events__name--big">
-              Від класицизму до романтизму
-            </h3>
           </div>
         </div>
       </div>
@@ -165,7 +167,7 @@
             <img
               src="/images/photos/04.jpg"
               alt="Перше фото в галереї"
-              class="gallery__image gallery__image--1 grid__item--desktop-1-3 grid__item--tablet-1-3 grid__item--mobile-1-2"
+              class="gallery__image gallery__image--1 grid__item--desktop-1-4 grid__item--tablet-1-3 grid__item--mobile-1-2"
             >
             <img
               src="/images/photos/05.jpg"
@@ -217,7 +219,7 @@
                     required
                   >
                 </form>
-                <a href="#actuals" class="tickets__button"></a>
+                <a href="#actuals" class="tickets__button tickets__button--contacts"></a>
               </div>
             </div>
           </div>
@@ -253,7 +255,7 @@
 
             <div class="menu__information information grid__item--desktop-3-4 grid__item--tablet-2-3 grid__item--mobile-1-1">
               <h4 class="information__title information__title--footer">Графік роботи</h4>
-              <div class="information__data">
+              <div class="information__data information__data--footer">
                 <p class="information__working-hours information__working-hours--footer">
                   <strong>12:00 — 20:00</strong> середа <br>
                   <strong>12:00 — 20:00</strong> четвер <br>
@@ -274,6 +276,7 @@
               <h4 class="information__title information__title--footer">Контакти:</h4>
 
               <a
+                type="link"
                 class="footer__address"
                 href="https://goo.gl/maps/PN9jgnNUQLVZhdgs9"
                 target="_blank"
@@ -281,15 +284,27 @@
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
 
-              <a class="footer__tell" href="tel:+38(044)2781357">
+              <a
+                type="tel"
+                class="footer__tell"
+                href="tel:+38(044)2781357"
+              >
                 тел. +38 (044) 278-13-57
               </a>
 
-              <a class="footer__fax" href="tel:+38(044)2787454">
+              <a
+                type="tel"
+                class="footer__fax"
+                href="tel:+38(044)2787454"
+              >
                 факс +38 (044) 278-74-54
               </a>
 
-              <a class="footer__email" href="mailto:footer@namu.kiev.ua">
+              <a
+                type="email"
+                class="footer__email"
+                href="mailto:footer@namu.kiev.ua"
+              >
                 e-mail: footer@namu.kiev.ua
               </a>
             </div>
@@ -308,7 +323,7 @@
                 <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
               </li>
             </div>
-            <div class="nav__list nav__list--footer grid__item--desktop-10-11 grid__item--mobile-2-2  ">
+            <div class="nav__list nav__list--footer grid__item--desktop-10-11 grid__item--tablet-4-5 grid__item--mobile-2-2">
               <li class="nav__item nav__item--footer">
                 <a href="#about-us" class="nav__link nav__link--footer">Про Нас</a>
               </li>
@@ -320,7 +335,7 @@
 
           <div class="footer__copyright">
             <p class="footer__copyright-text">
-              Copyright © 2019. All Rights Reserved.
+              Copyright © 2023. All Rights Reserved.
             </p>
             <p class="footer__copyright-text">
               Designed by Zhyriada Marina
