--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     >
   </head>
   <body class="page__body">
+    <div class="page-overlay">
+
+    </div>
     <header class="header">
       <div class="header__container">
         <div class="header__menu-logo">
@@ -104,7 +107,8 @@
             <div class="actual-events__titles">
               <h3 class="actual-events__title">Йду і повертаюсь
               </h3>
-              <div class="actual-events__rectangle"></div>
+
+              <img src="./images/icons/Rectangle.png" alt="red rectangle" class="actual-events__rectangle">
             </div>
 
             <div class="actual-events__text">
@@ -127,7 +131,8 @@
             <div class="actual-events__titles">
               <h3 class="actual-events__title">І спогади і мрії
               </h3>
-              <div class="actual-events__rectangle"></div>
+
+              <img src="./images/icons/Rectangle.png" alt="red rectangle" class="actual-events__rectangle">
             </div>
 
             <div class="actual-events__text">
@@ -193,7 +198,7 @@
               <img
                 src="./images/gallery/galery4.png"
                 alt="photo4"
-                class="galery__image"
+                class="galery__image galery__image--last"
                 id="img4"
               >
             </div>
@@ -213,13 +218,19 @@
           <div class="subscription__subtitle">
             Бути в курсі всіх актуальних подій та останніх новин.
           </div>
-          <form action="#" class="subscription__form">
+          <form action="#" class="subscription__form"
+          method="post"
+          id="myForm">
             <input
               type="email"
+              id="email"
+              name="email"
               class="subscription__email-form"
               placeholder="E-mail"
+              autocomplete="off"
+              required
             >
-            <button class="subscription__button">
+            <button class="subscription__button" type="submit">
               <img
                 src="./images/icons/arrow.svg"
                 alt="arrow"
@@ -244,16 +255,21 @@
               </a>
 
               <div class="contact-us__social-nets">
-                <img
+                <a href="https://uk-ua.facebook.com/">
+                  <img
                   src="./images/icons/icon-facebook.svg"
                   alt="facebook"
                   class="contact-us__net"
                 >
-                <img
+                </a>
+
+                <a href="https://www.instagram.com/">
+                  <img
                   src="./images/icons/icon-instagram.svg"
                   alt="instagram"
                   class="contact-us__net"
                 >
+                </a>
               </div>
             </div>
             <div class="contact-us__container">
@@ -268,7 +284,7 @@
                     <li><strong>11:00 — 19:00</strong> Неділя</li>
                   </ul>
                   <div class="contact-us__add-data">
-                    Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+                    <strong>Вихідні: </strong>понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
                   </div>
                 </div>
 
@@ -324,6 +340,7 @@
         </div>
       </section>
     </main>
+
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
