Corrections are made

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <div class="header__tickets tickets">
             <div class="tickets__title">Квитки</div>
 
-            <a href="#actuals" class="tickets__button"></a>
+            <button href="#actuals" class="tickets__button"></button>
           </div>
 
           <a href="#actuals" class="header__to-events">Події</a>
@@ -198,30 +198,29 @@
       <div class="page__section page__section--contacts contacts" id="subscription">
         <div class="container">
           <div class="grid grid--contacts">
-            <div class="contacts__block grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
-              <h2 class="page__title page__title--contacts">
-                Підписка
-              </h2>
-              <p class="contacts__text">
-                Бути в курсі всіх актуальних подій та останніх новин.
-              </p>
-              <div class="contacts__flex">
-                <form
-                  action="/"
-                  method="post"
-                  class="contacts__form"
-                >
-                  <input
-                    name="E-mail"
-                    type="email"
-                    class="contacts__form-field"
-                    placeholder="E-mail"
-                    required
-                  >
-                </form>
-                <a href="#actuals" class="tickets__button tickets__button--contacts"></a>
-              </div>
-            </div>
+            <h2 class="page__title page__title--contacts grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
+              Підписка
+            </h2>
+            <p class="contacts__text grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              action="/"
+              method="post"
+              class="contacts__form grid__item--desktop-4-9 grid__item--tablet-2-5 grid__item--mobile-1-2"
+            >
+              <input
+                name="E-mail"
+                type="email"
+                class="contacts__form-field"
+                placeholder="E-mail"
+                required
+              >
+
+              <button href="#actuals" class="tickets__button tickets__button--contacts"></button>
+            </form>
+
           </div>
         </div>
       </div>
