--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,11 @@
               <h3 class="actual-events__title">Йду і повертаюсь
               </h3>
 
-              <img src="./images/icons/Rectangle.png" alt="red rectangle" class="actual-events__rectangle">
+              <img
+                src="./images/icons/Rectangle.png"
+                alt="red rectangle"
+                class="actual-events__rectangle"
+              >
             </div>
 
             <div class="actual-events__text">
@@ -132,7 +136,11 @@
               <h3 class="actual-events__title">І спогади і мрії
               </h3>
 
-              <img src="./images/icons/Rectangle.png" alt="red rectangle" class="actual-events__rectangle">
+              <img
+                src="./images/icons/Rectangle.png"
+                alt="red rectangle"
+                class="actual-events__rectangle"
+              >
             </div>
 
             <div class="actual-events__text">
