--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="header__block">
         <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
         <a class="header__button" href="#events">
-          <div href="#" class="header__button-title">КВИТКИ</div>
+          <div class="header__button-title">КВИТКИ</div>
           <div class="header__button-rectangle">
             <img
               src="./images/button-arrow.png"
@@ -199,9 +199,6 @@
               src="./images/button-arrow-black.png"
               alt="arrow"
               class="subscription__button-arrow"
-              type="submit"
-              name="submit"
-              required
             >
           </button>
         </form>
@@ -213,8 +210,8 @@
         <a href="#" class="footer__logo"></a>
 
         <div class="footer__icons">
-          <a href="#" class="icon facebook-icon"></a>
-          <a href="#" class="icon insta-icon"></a>
+          <a href="https://www.facebook.com/?locale=uk_UA" class="icon facebook-icon"></a>
+          <a href="https://www.instagram.com/" class="icon insta-icon"></a>
         </div>
       </div>
 
